Sorted Dec 15 stream link.

--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -24,7 +24,6 @@ Check out our upcoming events:
 
 |        Date             |    Time      | Streamers                                                                                             | Show                                                                                                 |
 | :---------------------: | :----------: | :---------------------------------------------------------------------------------------------------- | :--------------------------------------------------------------------------------------------------- |
-| Thursday, December 15   | 10:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays: Node-RED Episode 2][twitch]                                            |
 | Thursday, December 15   | 4:00 PM UTC  | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [Redis University Office Hours][officehrs]                                                           |
 | Friday, December 16     | 6:00 PM UTC  | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][twitch]                                                                       |
 | Thursday, January 5     | 10:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays: New Project][twitch]                                                   |
@@ -51,6 +50,7 @@ Past events:
 
 |         Date           |    Time      | Streamers                                                                                             | Show                                                                                             |
 | :-------------------:  | :----------: | :---------------------------------------------------------------------------------------------------- | :----------------------------------------------------------------------------------------------- |
+| Thursday, December 15  | 10:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays: Node-RED Episode 2][71]                                            |
 | Monday, December 12    | 3:00 PM PST  | [Justin Castilla][justin]                                                                             | [Do birds dream in JSON?][70]                                                                    |
 | Friday, December 9     | 12:30 PM PST | [Savannah Norem][norem], [Justin Castilla][justin]                                                    | [RU204: Live Day 5][69]                                                                          |
 | Friday, December 9     | 6:00 PM UTC  | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][68]                                                                       |
@@ -169,6 +169,7 @@ Past events:
 [officehrs]: https://discord.com/channels/697882427875393627/981667564570706000
 
 <!-- Links to specific videos -->
+[71]: https://www.youtube.com/watch?v=r3yaVFN7Mzg
 [70]: https://www.youtube.com/watch?v=EQEzqMtyEeA
 [69]: https://www.youtube.com/watch?v=VKDkPWSm9lk
 [68]: https://www.youtube.com/watch?v=ml-Pm_B5S9w
