--- a/docs/howtos/quick-start/node/_node-basic-querying.mdx
+++ b/docs/howtos/quick-start/node/_node-basic-querying.mdx
@@ -84,4 +84,4 @@ await client.quit();
 await client.disconnect();
 ```
 
-- More details at [Github repo](https://github.com/redis/node-redis) and also check Javascript/ NodeJS apps at [Redis Launchpad](https://launchpad.redis.com/)
+- For more information visit the [node-redis Github repo](https://github.com/redis/node-redis), and also check JavaScript/NodeJS apps at [Redis Launchpad](https://launchpad.redis.com/)
