--- a/docs/howtos/quick-start/python/_python-basic-querying.mdx
+++ b/docs/howtos/quick-start/python/_python-basic-querying.mdx
@@ -60,3 +60,5 @@ r.decr('key')
 # use below style for unsupported commands by client library
 r.execute_command('SET', 'key', 'value')
 ```
+
+- For more information, checkout the [redis-py Github repo](https://github.com/redis/redis-py)
