--- a/docs/howtos/quick-start/node/_node-secondary-indexing.mdx
+++ b/docs/howtos/quick-start/node/_node-secondary-indexing.mdx
@@ -1,5 +1,5 @@
 
-[Redis OM Node](https://github.com/redis/redis-om-node) client library is used in below example but you can also use [Node Redis](https://github.com/redis/node-redis), [IO Redis](https://github.com/luin/ioredis) or any other supported [client](https://redis.io/resources/clients/)
+The following example uses [Redis OM Node](https://github.com/redis/redis-om-node), but you can also use [Node Redis](https://github.com/redis/node-redis), [IO Redis](https://github.com/luin/ioredis) or any other supported [client](https://redis.io/resources/clients/)
 
 ```sh
 # install RedisOM in the project
@@ -54,7 +54,7 @@ import { Router } from 'express';
 import { personRepository } from 'person.js';
 ```
 
-- Insert sample
+- Insert example
 
 ```js
 let input = {
@@ -73,14 +73,14 @@ let input = {
 const person = await personRepository.createAndSave(input);
 ```
 
-- Read sample
+- Read example
 
 ```js
 const id = '01FX8N39YVZRCQNAW0R5T53H5T';
 const person = await personRepository.fetch(id);
 ```
 
-- Update sample
+- Update example
 
 ```js
 const person = await personRepository.fetch(req.params.id);
@@ -107,20 +107,14 @@ person.locationUpdated = locationUpdated;
 await personRepository.save(person);
 ```
 
-- Delete sample
+- Search examples
 
 ```js
-await personRepository.remove(req.params.id);
-```
-
-- Search samples
-
-```js
-//get all records of persons
+// Get all person records
 const queryBuilder = personRepository.search();
-const persons = await queryBuilder.return.all();
+const people = await queryBuilder.return.all();
 
-//"multiple and" condition sample
+// Multiple AND conditions example
 const queryBuilder = personRepository
   .search()
   .where('verified')
@@ -130,17 +124,27 @@ const queryBuilder = personRepository
   .and('lastName')
   .eq(lastName);
 //console.log(queryBuilder.query);
-const persons = await queryBuilder.return.all();
+const people = await queryBuilder.return.all();
 
-// "OR" condition sample
+// Multiple OR conditions example
 const queryBuilder = personRepository
   .search()
   .where('verified')
   .eq(true)
   .or((search) => search.where('age').gte(21).and('lastName').eq(lastName))
   .sortAscending('age');
-const persons = await queryBuilder.return.all();
+const people = await queryBuilder.return.all();
 ```
 
-Useful links : [Github repo](https://github.com/redis/redis-om-node) and [getting started docs](https://redis.io/docs/stack/get-started/tutorials/stack-node/),
-[getting started video](https://www.youtube.com/watch?v=KUfufrwpBkM) and it's [source code](https://github.com/redis-developer/express-redis-om-workshop)
+- Delete example
+
+```js
+await personRepository.remove(req.params.id);
+```
+
+### Useful Resources
+
+1. [Github repo](https://github.com/redis/redis-om-node)
+1. [Getting started docs](https://redis.io/docs/stack/get-started/tutorials/stack-node/)
+1. [Getting started video](https://www.youtube.com/watch?v=KUfufrwpBkM)
+   - [Source code](https://github.com/redis-developer/express-redis-om-workshop)
