hiding java and c# until they are complete

--- a/docs/howtos/quick-start/index-quick-start.mdx
+++ b/docs/howtos/quick-start/index-quick-start.mdx
@@ -90,8 +90,8 @@ Use one of the following ways to set up Redis :
     {label: 'CLI', value: 'CLI'},
     {label: 'JavaScript/Node.js', value: 'JS'},
     {label: 'Python', value: 'PYTHON'},
-    {label: 'C#', value: 'C#'},
-    {label: 'Java', value: 'JAVA'},
+    //{label: 'C#', value: 'C#'},
+    //{label: 'Java', value: 'JAVA'},
   ]}>
 
 <TabItem value="CLI">
@@ -112,7 +112,7 @@ Use one of the following ways to set up Redis :
 
 </TabItem>
 
-<TabItem value="C#">
+<!-- <TabItem value="C#">
 
 <CSharpBasicQuerying />
 
@@ -122,7 +122,7 @@ Use one of the following ways to set up Redis :
 
 <JavaBasicQuerying />
 
-</TabItem>
+</TabItem> -->
 </Tabs>
 
 ## Secondary indexing & searching JSON
@@ -134,8 +134,8 @@ Use one of the following ways to set up Redis :
     {label: 'CLI', value: 'CLI'},
     {label: 'JavaScript/Node.js', value: 'JS'},
     {label: 'Python', value: 'PYTHON'},
-    {label: 'C#', value: 'C#'},
-    {label: 'Java', value: 'JAVA'},
+    //{label: 'C#', value: 'C#'},
+    //{label: 'Java', value: 'JAVA'},
 ]}>
 
 <TabItem value="CLI">
@@ -156,7 +156,7 @@ Use one of the following ways to set up Redis :
 
 </TabItem>
 
-<TabItem value="C#">
+<!-- <TabItem value="C#">
 
 <CSharpSecondaryIndexing />
 
@@ -166,7 +166,7 @@ Use one of the following ways to set up Redis :
 
 <JavaSecondaryIndexing />
 
-</TabItem>
+</TabItem> -->
 </Tabs>
 
 ## Sync with other databases
