--- a/docs/howtos/quick-start/setup/_windows-setup.mdx
+++ b/docs/howtos/quick-start/setup/_windows-setup.mdx
@@ -1,21 +1,4 @@
 
-Redis is not officially supported on Windows, but can be installed via WSL2 (Windows Subsystem for Linux) for development purpose
+Redis is not officially supported on Windows, so we recommend using Docker.
 
-- Enable [WSL2](https://docs.microsoft.com/en-us/windows/wsl/install) to run Ubuntu on Windows and follow below Ubuntu steps
-
-```sh
- sudo apt-add-repository ppa:redislabs/redis
- sudo apt-get update
- sudo apt-get upgrade
- sudo apt-get install redis-server
-```
-
-```
-# Restart the Redis server
-sudo service redis-server restart
-
-# Connect to Redis
-redis-cli
-```
-
-Detailed Windows instructions can be viewed [here](/create/windows)
+Please follow the Docker instructions.
