--- a/docs/howtos/quick-start/node/_node-secondary-indexing.mdx
+++ b/docs/howtos/quick-start/node/_node-secondary-indexing.mdx
@@ -1,7 +1,7 @@
 
 The following example uses [Redis OM Node](https://github.com/redis/redis-om-node), but you can also use [Node Redis](https://github.com/redis/node-redis), [IO Redis](https://github.com/luin/ioredis), or any other supported [client](https://redis.io/resources/clients/)
 
-```sh
+```shell
 # install RedisOM in the project
 npm install redis-om --save
 ```
