--- a/docs/howtos/quick-start/python/_python-secondary-indexing.mdx
+++ b/docs/howtos/quick-start/python/_python-secondary-indexing.mdx
@@ -1,6 +1,6 @@
 The following example uses [Redis OM Python](https://github.com/redis/redis-om-python), but you can also use [redis-py](https://github.com/redis/redis-py) or any other supported [client](https://redis.io/resources/clients/)
 
-```sh
+```shell
 # install Redis OM in the project
 pip install redis-om
 ```
