--- a/docs/howtos/quick-start/setup/_macos-setup.mdx
+++ b/docs/howtos/quick-start/setup/_macos-setup.mdx
@@ -1,10 +1,10 @@
-```sh
+```shell
 # install redis-stack
-brew tap redis-stack/redis-stack
-brew install --cask redis-stack
+$ brew tap redis-stack/redis-stack
+$ brew install --cask redis-stack
 
 # start redis-stack
-redis-stack-server
+$ redis-stack-server
 ```
 
 Detailed MacOS instructions can be viewed [here](/create/homebrew/)
