--- a/docs/howtos/quick-start/cli/_cli-basic-querying.mdx
+++ b/docs/howtos/quick-start/cli/_cli-basic-querying.mdx
@@ -4,96 +4,96 @@
 **RedisInsight**
 ![RedisInsight](../images/redis-insight.svg)
 
-```sh
+```shell
 # syntax 1 : connect using host & port
-redis-cli -h host -p port -a password
+$ redis-cli -h host -p port -a password
 
 # example 1
-redis-cli -h redis15.localnet.org -p 6390 -a myUnguessablePassword
+$ redis-cli -h redis15.localnet.org -p 6390 -a myUnguessablePassword
 
 # syntax 2 : connect using uri
-redis-cli -u redis://user:password@host:port/dbnum
+$ redis-cli -u redis://user:password@host:port/dbnum
 
 # example 2
-redis-cli -u redis://LJenkins:p%40ssw0rd@redis-16379.hosted.com:16379/0
+$ redis-cli -u redis://LJenkins:p%40ssw0rd@redis-16379.hosted.com:16379/0
 
 ```
 
 - Basic CLI / RedisInsight workbench commands
 
-```sh
+```shell
 # syntax : Check specific keys
-keys pattern
+> keys pattern
 
 # example
-keys *
+> keys *
 
 #------------
 # syntax : Check number of keys in database
-dbsize
+> dbsize
 
 #------------
 # syntax : set a key value
-set key value EX expirySeconds
+> set key value EX expirySeconds
 
 # example
-set company redis EX 60
+> set company redis EX 60
 
 #------------
 # syntax : get value by key
-get key
+> get key
 
 # example
-get company
+> get company
 
 #------------
 # syntax : delete keys
-del key1 key2 key3 ... keyN
+> del key1 key2 key3 ... keyN
 
 # example
-del company
+> del company
 
 #------------
 # syntax : Check if key exists
-exists key1
+> exists key1
 
 # example
-exists company
+> exists company
 
 #------------
 # syntax : set expiry to key
-expire key seconds
+> expire key seconds
 
 # example
-expire lastname 60
+> expire lastname 60
 
 #------------
 # syntax : remove expiry from key
-persist key
+> persist key
 
 # example
-persist lastname
+> persist lastname
 
 #------------
 # syntax : find (remaining) time to live of a key
-ttl key
+> ttl key
 
 # example
-ttl lastname
+> ttl lastname
 
 #------------
 # syntax : increment a number
-incr key
+> incr key
 
 # example
-incr counter
+> incr counter
 
 #------------
 # syntax : decrement a number
-decr key
+> decr key
 
 # example
-decr counter
+> decr counter
 ```
 
 Detailed CLI instructions can be viewed [here](https://redis.io/docs/manual/cli/) and
