--- a/docs/howtos/quick-start/cli/_cli-secondary-indexing.mdx
+++ b/docs/howtos/quick-start/cli/_cli-secondary-indexing.mdx
@@ -1,73 +1,73 @@
 
-**RedisJSON** adds JSON data type for Redis.
+Redis Stack enables the JSON data type in Redis.
 
-```sh
+```shell
 # syntax : set an object value to a key
-JSON.SET objKey $ value
+> JSON.SET objKey $ value
 
 # example
-JSON.SET person $ '{"name":"Leonard Cohen","dob":1478476800,"isActive": true, "hobbies":["music", "cricket"]}'
+> JSON.SET person $ '{"name":"Leonard Cohen","dob":1478476800,"isActive": true, "hobbies":["music", "cricket"]}'
 
 #------------
 # syntax : get object value of a key
-JSON.GET objKey $
+> JSON.GET objKey $
 
 # example
-JSON.GET person $
+> JSON.GET person $
 
 #------------
 # syntax : find object key length
-JSON.OBJLEN objKey $
+> JSON.OBJLEN objKey $
 
 # example
-JSON.OBJLEN person $
+> JSON.OBJLEN person $
 
 #------------
 # syntax : find object keys
-JSON.OBJKEYS objKey $
+> JSON.OBJKEYS objKey $
 
 # example
-JSON.OBJKEYS person $
+> JSON.OBJKEYS person $
 
 #------------
 # syntax : update nested property
-JSON.SET objKey $.prop value
+> JSON.SET objKey $.prop value
 
 # example
-JSON.SET person $.name '"Alex"'
+> JSON.SET person $.name '"Alex"'
 
 #------------
 # syntax : update nested array
-JSON.SET objKey $.arrayProp fullValue
-JSON.SET objKey $.arrayProp[index] value
+> JSON.SET objKey $.arrayProp fullValue
+> JSON.SET objKey $.arrayProp[index] value
 
 # example
-JSON.SET person $.hobbies '["music", "cricket"]'
-JSON.SET person $.hobbies[1] '"dance"'
+> JSON.SET person $.hobbies '["music", "cricket"]'
+> JSON.SET person $.hobbies[1] '"dance"'
 
 #------------
 # syntax : remove nested array item by index
-JSON.ARRPOP objKey $.arrayProp index
+> JSON.ARRPOP objKey $.arrayProp index
 
 # example
-JSON.ARRPOP person $.hobbies 1
+> JSON.ARRPOP person $.hobbies 1
 ```
 
-More RedisJSON details can be found in [docs](https://redis.io/docs/stack/json/)
+More details can be found in the [Redis Stack docs](https://redis.io/docs/stack/json/)
 
 ---
 
-**Redis Search** is a query and indexing engine for Redis, providing secondary indexing, full-text search and aggregations capabilities.
+Redis Stack enables a query and indexing engine for Redis, providing secondary indexing, full-text search and aggregations capabilities.
 
 - We have to create index on schema to be able to search on its data
 
-```sh
+```shell
 # syntax
-FT.CREATE {index_name} ON JSON SCHEMA {json_path} AS {attribute} {type}
+> FT.CREATE {index_name} ON JSON SCHEMA {json_path} AS {attribute} {type}
 # note : attribute = logical name,  json_path = JSONPath expressions
 
 # example
-FT.CREATE userIdx ON JSON SCHEMA $.user.name AS name TEXT $.user.hobbies AS hobbies TAG $.user.age as age NUMERIC
+> FT.CREATE userIdx ON JSON SCHEMA $.user.name AS name TEXT $.user.hobbies AS hobbies TAG $.user.age as age NUMERIC
 # note : Can search by any attribute mentioned in the above index.
 ```
 
@@ -86,18 +86,16 @@ Once index is created, any pre-existing/ new/ modified JSON document is automati
 }
 ```
 
-```sh
+```shell
 # adding JSON document
-JSON.SET myDoc $ '{"user":{"name":"John Smith","hobbies":"foo,bar","age":23}}'
+> JSON.SET myDoc $ '{"user":{"name":"John Smith","hobbies":"foo,bar","age":23}}'
 ```
 
 - Search
 
-```sh
+```shell
 # search all user documents with name 'John'
-FT.SEARCH userIdx '@name:(John)'
-
-# output
+> FT.SEARCH userIdx '@name:(John)'
 1) (integer) 1
 2) "myDoc"
 3) 1) "$"
@@ -106,22 +104,18 @@ FT.SEARCH userIdx '@name:(John)'
 
 - Search & project required fields
 
-```sh
+```shell
 # search documents with name 'John' & project only age field
-FT.SEARCH userIdx '@name:(John)' RETURN 1 $.user.age
-
-# output
+> FT.SEARCH userIdx '@name:(John)' RETURN 1 $.user.age
 1) (integer) 1
 2) "myDoc"
 3) 1) "$.user.age"
    2) "23"
 ```
 
-```sh
+```shell
 # project multiple fields
-FT.SEARCH userIdx '@name:(John)' RETURN 2 $.user.age $.user.name
-
-# output
+> FT.SEARCH userIdx '@name:(John)' RETURN 2 $.user.age $.user.name
 1) (integer) 1
 2) "myDoc"
 3) 1) "$.user.age"
@@ -131,7 +125,7 @@ FT.SEARCH userIdx '@name:(John)' RETURN 2 $.user.age $.user.name
 
 #------------
 # project with alias name
-FT.SEARCH userIdx '@name:(John)' RETURN 3 $.user.age AS userAge
+> FT.SEARCH userIdx '@name:(John)' RETURN 3 $.user.age AS userAge
 
 1) (integer) 1
 2) "myDoc"
@@ -140,9 +134,7 @@ FT.SEARCH userIdx '@name:(John)' RETURN 3 $.user.age AS userAge
 #------------
 
 # multi field query
-FT.SEARCH userIdx '@name:(John) @hobbies:{foo | me} @age:[20 30]'
-
-# output
+> FT.SEARCH userIdx '@name:(John) @hobbies:{foo | me} @age:[20 30]'
 1) (integer) 1
 2) "myDoc"
 3) 1) "$"
@@ -153,8 +145,8 @@ More details on [query syntax](https://redis.io/docs/stack/search/reference/quer
 
 - Drop index
 
-```sh
-FT.DROPINDEX userIdx
+```shell
+> FT.DROPINDEX userIdx
 ```
 
 Watch video [RediSearch (RedisConf 2020)](https://www.youtube.com/watch?v=9R29LLWquME), also more details can be found in [docs](https://redis.io/docs/stack/search/)
