--- a/docs/howtos/quick-start/index-quick-start.mdx
+++ b/docs/howtos/quick-start/index-quick-start.mdx
@@ -96,7 +96,7 @@ If you choose to use local Redis we strongly recommend using Docker. If you choo
   groupId="language"
   values={[
     {label: 'CLI', value: 'CLI'},
-    {label: 'JavaScript/Node.js', value: 'JS'},
+    {label: 'JavaScript', value: 'JS'},
     {label: 'Python', value: 'PYTHON'},
     //{label: 'C#', value: 'C#'},
     //{label: 'Java', value: 'JAVA'},
@@ -140,7 +140,7 @@ If you choose to use local Redis we strongly recommend using Docker. If you choo
   groupId="language"
   values={[
     {label: 'CLI', value: 'CLI'},
-    {label: 'JavaScript/Node.js', value: 'JS'},
+    {label: 'JavaScript', value: 'JS'},
     {label: 'Python', value: 'PYTHON'},
     //{label: 'C#', value: 'C#'},
     //{label: 'Java', value: 'JAVA'},
