--- a/docs/howtos/quick-start/node/_node-basic-querying.mdx
+++ b/docs/howtos/quick-start/node/_node-basic-querying.mdx
@@ -1,4 +1,3 @@
-
 ```shell
 # install redis in the project
 npm install redis --save
@@ -24,11 +23,11 @@ await client.connect();
 const pattern = '*';
 await client.keys(pattern);
 
-#------------
+//------------
 // Check number of keys in database
 await client.dbsize();
 
-#------------
+//------------
 // set key value
 await client.set('key', 'value');
 await client.set('key', 'value', {
@@ -36,43 +35,43 @@ await client.set('key', 'value', {
   NX: true,
 });
 
-#------------
+//------------
 // get value by key
 const value = await client.get('key');
 
-#------------
+//------------
 //syntax : delete keys
 await client.del('key');
 const keyArr = ['key1', 'key2', 'key3'];
 await client.del(...keyArr);
 
-#------------
+//------------
 // Check if key exists
 await client.exists('key');
 
-#------------
+//------------
 // set expiry to key
 const expireInSeconds = 30;
 await client.expire('key', expireInSeconds);
 
-#------------
+//------------
 // remove expiry from key
 await client.persist('key');
 
-#------------
+//------------
 // find (remaining) time to live of a key
 await client.ttl('key');
 
-#------------
+//------------
 // increment a number
 await client.incr('key');
 
-#------------
+//------------
 // decrement a number
 await client.decr('key');
 
-#------------
-//use below style for unsupported commands by client library
+//------------
+// use the method below to execute commands directly
 await client.sendCommand(['SET', 'key', 'value']);
 ```
 
@@ -84,4 +83,8 @@ await client.quit();
 await client.disconnect();
 ```
 
-- For more information visit the [node-redis Github repo](https://github.com/redis/node-redis), and also check JavaScript/NodeJS apps at [Redis Launchpad](https://launchpad.redis.com/)
+### Additional Resources
+
+1. [node-redis Github repo](https://github.com/redis/node-redis)
+1. [Node.js Redis Crash Course](/develop/node/node-crash-course)
+1. JavaScript/NodeJS apps on the [Redis Launchpad](https://launchpad.redis.com/)
