finishing the Redis OM .NET getting started doc and enabling it in the menu

--- a/docs/howtos/quick-start/index-quick-start.mdx
+++ b/docs/howtos/quick-start/index-quick-start.mdx
@@ -98,7 +98,7 @@ If you choose to use local Redis we strongly recommend using Docker. If you choo
     {label: 'CLI', value: 'CLI'},
     {label: 'JavaScript', value: 'JS'},
     {label: 'Python', value: 'PYTHON'},
-    //{label: 'C#', value: 'C#'},
+    {label: 'C#', value: 'C#'},
     //{label: 'Java', value: 'JAVA'},
   ]}>
 
@@ -120,13 +120,13 @@ If you choose to use local Redis we strongly recommend using Docker. If you choo
 
 </TabItem>
 
-<!-- <TabItem value="C#">
+<TabItem value="C#">
 
 <CSharpBasicQuerying />
 
 </TabItem>
 
-<TabItem value="JAVA">
+<!-- <TabItem value="JAVA">
 
 <JavaBasicQuerying />
 
@@ -142,7 +142,7 @@ If you choose to use local Redis we strongly recommend using Docker. If you choo
     {label: 'CLI', value: 'CLI'},
     {label: 'JavaScript', value: 'JS'},
     {label: 'Python', value: 'PYTHON'},
-    //{label: 'C#', value: 'C#'},
+    {label: 'C#', value: 'C#'},
     //{label: 'Java', value: 'JAVA'},
 ]}>
 
@@ -164,13 +164,13 @@ If you choose to use local Redis we strongly recommend using Docker. If you choo
 
 </TabItem>
 
-<!-- <TabItem value="C#">
+<TabItem value="C#">
 
 <CSharpSecondaryIndexing />
 
 </TabItem>
 
-<TabItem value="JAVA">
+<!-- <TabItem value="JAVA">
 
 <JavaSecondaryIndexing />
 
