--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -39,8 +39,8 @@ Sometimes we're on the road speaking at in-person events or enjoying a well-dese
 | Monday    | 3:00 PM PST | [Justin Castilla][justin]                                                                             | [Do birds dream in JSON?][twitch]                                |
 | Tuesday   | 2:00 PM ET  | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case][twitch]                         |
 | Thursday  | 9:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays][twitch]                            |
-| Thursday  | 3:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [Weekly Redis University Office Hours][officehrs]                |
-| Friday    | 6:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][twitch]                                   |
+| Thursday  | 3:00 PM UTC | [Suze Shardlow][Suze], [Simon Prickett][simon] and [Justin Castilla][justin]                          | [Weekly Redis University Office Hours][officehrs]                |
+| Friday    | 6:00 PM UTC | [Suze Shardlow][Suze], [Simon Prickett][simon] and [Justin Castilla][justin]                          | [This Week On Discord][twitch]                                   |
 
   </TabItem>
   <TabItem value="past">
