--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -24,7 +24,6 @@ Check out our upcoming events:
 
 |        Date             |    Time      | Streamers                                                                                             | Show                                                                                                 |
 | :---------------------: | :----------: | :---------------------------------------------------------------------------------------------------- | :--------------------------------------------------------------------------------------------------- |
-| Thursday, January 12    | 10:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays: Introduction to Redis Stack for IoT Projects][twitch]                  |
 | Thursday, January 12    | 4:00 PM UTC  | [Suze Shardlow][Suze], [Savannnah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin]| [Weekly Redis University Office Hours][officehrs]                                                    |
 | Friday, January 13      | 6:00 PM UTC  | [Suze Shardlow][Suze], [Savannnah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin]| [This Week On Discord][twitch]                                                                       |
 
@@ -48,6 +47,7 @@ Past events:
 
 |         Date           |    Time      | Streamers                                                                                             | Show                                                                                             |
 | :-------------------:  | :----------: | :---------------------------------------------------------------------------------------------------- | :----------------------------------------------------------------------------------------------- |
+| Thursday, January 12   | 10:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays: Introduction to Redis Stack for IoT Projects][74]                  |
 | Friday, January 6      | 6:00 PM UTC  | [Suze Shardlow][Suze], [Simon Prickett][simon] and [Justin Castilla][justin]                          | [This Week On Discord][73]                                                                       |
 | **2022 Events**        |              |                                                                                                       |                                                                                                  |          
 | Friday, December 16    | 6:00 PM UTC  | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][72]                                                                       |
@@ -171,6 +171,7 @@ Past events:
 [officehrs]: https://discord.com/channels/697882427875393627/981667564570706000
 
 <!-- Links to specific videos -->
+[74]: https://www.youtube.com/watch?v=hdN80_g5doY
 [73]: https://www.youtube.com/watch?v=r7TXC7_Qn6M
 [72]: https://www.youtube.com/watch?v=Uxm7G_r_Vh0
 [71]: https://www.youtube.com/watch?v=r3yaVFN7Mzg
