--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -24,7 +24,6 @@ Check out our upcoming events:
 
 |        Date             |    Time      | Streamers                                                                                             | Show                                                                                                 |
 | :---------------------: | :----------: | :---------------------------------------------------------------------------------------------------- | :--------------------------------------------------------------------------------------------------- |
-| Thursday, January 12    | 4:00 PM UTC  | [Suze Shardlow][Suze], [Savannnah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin]| [Weekly Redis University Office Hours][officehrs]                                                    |
 | Friday, January 13      | 6:00 PM UTC  | [Suze Shardlow][Suze], [Savannnah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin]| [This Week On Discord][twitch]                                                                       |
 | Thursday, January 19    | 10:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays: New Project][twitch]                                                   |
 
@@ -49,6 +48,7 @@ Past events:
 
 |         Date           |    Time      | Streamers                                                                                             | Show                                                                                             |
 | :-------------------:  | :----------: | :---------------------------------------------------------------------------------------------------- | :----------------------------------------------------------------------------------------------- |
+| Thursday, January 12   | 4:00 PM UTC  | [Suze Shardlow][Suze] and [Simon Prickett][simon]                                                     | [Weekly Redis University Office Hours][officehrs]                                                |
 | Thursday, January 12   | 10:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays: Introduction to Redis Stack for IoT Projects][74]                  |
 | Friday, January 6      | 6:00 PM UTC  | [Suze Shardlow][Suze], [Simon Prickett][simon] and [Justin Castilla][justin]                          | [This Week On Discord][73]                                                                       |
 | **2022 Events**        |              |                                                                                                       |                                                                                                  |          
