--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -25,6 +25,7 @@ Check out our upcoming events:
 |        Date             |    Time      | Streamers                                                                                             | Show                                                                                                 |
 | :---------------------: | :----------: | :---------------------------------------------------------------------------------------------------- | :--------------------------------------------------------------------------------------------------- |
 | Friday, January 13      | 6:00 PM UTC  | [Suze Shardlow][Suze], [Savannnah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin]| [This Week On Discord][twitch]                                                                       |
+| Wednesday, January 18   | 3:00 PM PST  | [Justin Castilla][justin]                                                                             | [Do Bird dream in JSON? (Integrating Fast API)][twitch]                                                   |
 | Thursday, January 19    | 10:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays: New Project][twitch]                                                   |
 
 
