--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -24,6 +24,7 @@ Check out our upcoming events:
 
 |        Date             |    Time      | Streamers                                                                                             | Show                                                                                                 |
 | :---------------------: | :----------: | :---------------------------------------------------------------------------------------------------- | :--------------------------------------------------------------------------------------------------- |
+| Tuesday, January 17     | 10:30 AM UTC | [Savannah Norem][savannah]                                                                            | [savannah_streams_in_snake_case][twitch]                                                             |
 | Wednesday, January 18   | 3:00 PM PST  | [Justin Castilla][justin]                                                                             | [Do Birds dream in JSON? (Integrating Fast API)][twitch]                                             |
 | Thursday, January 19    | 10:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays: New Project][twitch]                                                   |
 
