updates justin links

--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -161,7 +161,7 @@ Past events:
 <!-- Links to streamers -->
 [bsb]: https://twitter.com/bsbodden
 [guy]: https://twitter.com/guyroyse
-[justin]: https://twitter.com/JustCastilla
+[justin]: http://www.justincastilla.com
 [norem]: https://twitter.com/sav_norem
 [simon]: https://simonprickett.dev
 [steve]: https://twitter.com/slorello
