Adding Windows usage video to getting started

--- a/docs/howtos/quick-start/setup/_windows-setup.mdx
+++ b/docs/howtos/quick-start/setup/_windows-setup.mdx
@@ -1,4 +1,16 @@
 
 Redis is not officially supported on Windows, so we recommend using Docker.
 
-Please follow the Docker instructions.
+Please follow the Docker instructions, or watch the following video that covers using Redis through WSL on Windows.
+
+
+<div class="text--center">
+  <iframe
+    width="760"
+    height="415"
+    src="https://www.youtube.com/embed/_nFwPTHOMIY"
+    title="YouTube video player"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    allowfullscreen></iframe>
+</div>
